Make tests thread safe